--- a/No2.filter/css/bootstrap.css
+++ b/No2.filter/css/bootstrap.css
@@ -240,8 +240,7 @@ button {
 }
 
 button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
+  outline: 0px;
 }
 
 input,
@@ -1976,9 +1975,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #80bdff;
+  border-color: #ff6800;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2016,7 +2015,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 select.form-control:focus::-ms-value {
-  color: #495057;
+  color: #642d00;
   background-color: #fff;
 }
 
@@ -3725,7 +3724,7 @@ tbody.collapse.show {
   height: calc(2.25rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
-  color: #495057;
+  color: #642d00;
   vertical-align: middle;
   background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
   background-size: 8px 10px;
@@ -3743,7 +3742,7 @@ tbody.collapse.show {
 }
 
 .custom-select:focus::-ms-value {
-  color: #495057;
+  color: #642d00;
   background-color: #fff;
 }
 
@@ -3754,7 +3753,7 @@ tbody.collapse.show {
 }
 
 .custom-select:disabled {
-  color: #6c757d;
+  color: #642d00;
   background-color: #e9ecef;
 }
 
