--- a/No2.filter/css/style.css
+++ b/No2.filter/css/style.css
@@ -1,6 +1,7 @@
 body {
-  font-family: 'Quicksand', sans-serif;
   height: 100vh;
+  font-family: 'Work Sans', sans-serif;
+  color: #666;
   background: url(../img/bg.jpg) no-repeat fixed #b32b00;
   background-size: cover;
   overflow: hidden;
@@ -27,6 +28,7 @@ button {
 }
 
 h1 {
+  font-family: 'Fredericka the Great', cursive;
   color: #fff;
 }
 
@@ -35,12 +37,25 @@ h1 {
   padding-left: 0px;
 }
 
+.pd-10 {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.mg-b08 {
+  margin-bottom: .8rem;
+}
+
 .w-100 {
   width: 100%;
 }
 
 .p-fixed {
   position: fixed;
+}
+
+.d-in {
+  display: inline;
 }
 
 .hide {
@@ -60,19 +75,9 @@ h1 {
 
 #header {
   width: 100%;
-  margin: 1rem 0 .8rem 0;
+  margin: 1rem 0 .6rem 0;
   text-align: center;
 }
-
-/*------------------ search ------------------*/
-
-#burger svg {
-  transition: .3s;
-  -moz-transition: .3s;
-  -webkit-transition: .3s;
-  -o-transition: .3s;
-}
-
 
 /*------------------ main ------------------*/
 
