--- a/No2.filter/css/style.css
+++ b/No2.filter/css/style.css
@@ -135,14 +135,17 @@ img {
 
 /*------------------ main ------------------*/
 
-iframe {
-  height: 82vh;
-  box-shadow: 0px 2px 8px 2px rgba(140, 35, 0, .5);
-  background-color: rgb(255, 250, 245);
+#windows {
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+    height: 82vh;
+    box-shadow: 0px 2px 8px 2px rgba(140, 35, 0, .5);
+    background-color: rgb(255, 250, 245);
 }
 
-#windows {
-  background-color: #fff;
+#windows iframe {
+  width: 100%;
+     height: 82vh;
 }
 
 #filter {
