--- a/No2.filter/css/style.css
+++ b/No2.filter/css/style.css
@@ -344,6 +344,9 @@ img {
 /*------------------------------------ max-width: 575.98px ------------------------------------*/
 
 @media (max-width: 575.98px) {
+  body {
+position: fixed;
+  }
   #header {
     margin: .8rem 0 .4rem 0;
   }
