房卡清單大小修正

--- a/No2.filter/css/style.css
+++ b/No2.filter/css/style.css
@@ -344,6 +344,13 @@ margin: 0 auto;
   display: none;
 }
 
+/*------------------------------------ min-width: 1200px ------------------------------------*/
+
+@media (min-width: 1200px) {
+  #content {
+    padding: 2rem 10rem .5rem 10rem;
+  }
+}
 
 /*------------------------------------ max-width: 575.98px ------------------------------------*/
 
