--- a/No3.admin_order/css/style.css
+++ b/No3.admin_order/css/style.css
@@ -242,22 +242,15 @@ h4 {
   box-shadow: 0px 1px 5px 2px rgba(221, 221, 221, .5);
 }
 
+.activity{
+    padding: 2rem 2rem 1.5rem 2rem;
+}
+
 .website,
 .orders {
   padding: 2rem 2rem 1rem 2rem;
   min-height: 27rem;
 }
-
-/* .total-info,
-.activity-info,
-.website-info,
-.orders-info {
-  margin: .6rem .6rem;
-  padding: 2rem 0;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0px 1px 5px 2px rgba(221, 221, 221, .5);
-} */
 
 .total-t {
   font-size: 2rem;
@@ -268,6 +261,15 @@ h4 {
 .fa-dollar-sign,
 .fa-money-bill {
   margin-right: .2rem;
+}
+
+#chart{
+  width: 100%;
+  height: 20rem;
+}
+
+#chart canvas{
+  width: 100%;
 }
 
 .w-item,
@@ -305,9 +307,9 @@ h4 {
   font-size: 4rem;
 }
 
-.fa-arrow-up,
-.fa-arrow-down {
-  margin-right: .2rem;
+.website .fa-caret-up,
+.website .fa-caret-down {
+  margin-right: .3rem;
 }
 
 .orders img {
