--- a/No3.admin_order/css/style.css
+++ b/No3.admin_order/css/style.css
@@ -61,9 +61,8 @@ h4 {
   padding-left: 10px;
 }
 
-.mg-15 {
-  margin-left: -30px;
-  margin-right: -30px;
+.mg-0 {
+  margin: 0 auto;
 }
 
 .w-100 {
@@ -103,12 +102,7 @@ h4 {
 }
 
 .navbar-brand {
-  padding-left: 1rem;
   color: #fcfcfc;
-}
-
-#navbarNav {
-  padding: 0 .5rem;
 }
 
 .navbar-brand:hover {
@@ -177,11 +171,14 @@ h4 {
 
 .range .navbar-expand-sm {
   justify-content: flex-end;
+  margin-bottom: .5rem;
 }
 
 .dropdown-menu {
   left: auto;
   right: 0;
+  min-width: 0;
+  text-align: center;
 }
 
 .dropdown-toggle::after {
@@ -213,22 +210,19 @@ h4 {
 }
 
 .fa-caret-right {
-  margin: 0 .2rem 0 .5rem;
-}
-
-.fa-caret-down {
-  margin-left: .3rem;
+  margin: 0 .3rem 0 .5rem;
 }
 
 .time-op {
   margin-left: .8rem;
 }
 
-.time-op a {
-  color: #666;
+.range .time-op a {
+  color: #42b58b;
 }
 
-.time-op a:hover {
+.time-op a:hover,
+.range .nav-link:hover {
   opacity: .6;
 }
 
@@ -236,14 +230,10 @@ h4 {
 
 .info {
   margin: .6rem .6rem;
-  padding: 2rem;
+  padding: 2rem 2rem 1.6rem 2rem;
   text-align: center;
   background-color: #fff;
   box-shadow: 0px 1px 5px 2px rgba(221, 221, 221, .5);
-}
-
-.activity{
-    padding: 2rem 2rem 1.5rem 2rem;
 }
 
 .website,
@@ -257,18 +247,12 @@ h4 {
   font-weight: 700;
 }
 
-.fa-hand-holding-usd,
-.fa-dollar-sign,
-.fa-money-bill {
-  margin-right: .2rem;
-}
-
-#chart{
+#chart {
   width: 100%;
   height: 20rem;
 }
 
-#chart canvas{
+#chart canvas {
   width: 100%;
 }
 
