--- a/No3.admin_order/css/style.css
+++ b/No3.admin_order/css/style.css
@@ -104,7 +104,8 @@ h4 {
 }
 
 .navbar-brand {
-  margin-right: 1.5rem;
+  margin: 0 1.5rem -.1rem .5rem;
+  font-size: 1.5rem;
   color: #fcfcfc;
 }
 
@@ -378,6 +379,9 @@ h4 {
   .navbar {
     padding: .6rem 0 .4rem 0;
     border-bottom: .2rem solid rgba(255, 255, 255, .8);
+  }
+  .navbar-brand {
+    margin: 0 1.5rem 0 .8rem;
   }
   .menu a:hover,
   .menu a.active {
