--- a/No4.product_gallery/css/style.css
+++ b/No4.product_gallery/css/style.css
@@ -331,17 +331,22 @@ h2 {
 @media (max-width: 768px) {
   .bg1 {
     background: url(../img/bg01.jpg) center no-repeat;
-    padding-bottom: 66.7%;
+    background-size: 100%;
     overflow: hidden;
   }
   .bg2 {
     background: url(../img/bg02.jpg) center no-repeat;
-    padding-bottom: 66.7%;
+    background-size: 100%;
     overflow: hidden;
   }
   .bg3 {
+    display: flex;
+    height: 40vh;
     background: url(../img/bg03.jpg) center bottom no-repeat;
+    background-size: 100%;
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
   }
   .bg1::before,
   .bg1::after,
@@ -363,6 +368,9 @@ h2 {
   }
   .item-info {
     margin-top: 1rem;
+  }
+  .bg3 h3 {
+    margin: 0 auto;
   }
 }
 
