--- a/No6.validation/css/bootstrap.css
+++ b/No6.validation/css/bootstrap.css
@@ -1974,34 +1974,34 @@ pre code {
 
 .form-control:focus {
   color: #495057;
-  background-color: #fff;
-  border-color: #ff6800;
+  background-color: rgba(255, 255, 255 ,.25);
+  border-color: #ffc921;
   outline: 0;
 
 }
 
 .form-control::-webkit-input-placeholder {
-  color: #6c757d;
+  color: rgba(255, 255, 255, .5);
   opacity: 1;
 }
 
 .form-control::-moz-placeholder {
-  color: #6c757d;
+  color: rgba(255, 255, 255, .5);
   opacity: 1;
 }
 
 .form-control:-ms-input-placeholder {
-  color: #6c757d;
+  color: rgba(255, 255, 255, .5);
   opacity: 1;
 }
 
 .form-control::-ms-input-placeholder {
-  color: #6c757d;
+  color: rgba(255, 255, 255, .5);
   opacity: 1;
 }
 
 .form-control::placeholder {
-  color: #6c757d;
+  color: rgba(255, 255, 255, .5);
   opacity: 1;
 }
 
