--- a/No7.Canvas_Game/css/style.css
+++ b/No7.Canvas_Game/css/style.css
@@ -27,6 +27,7 @@ canvas {
   padding: 8px;
   text-decoration: none;
   font-size: 14px;
+  font-family: '微軟正黑體';
   color: #fff;
   border: 1px solid #fff;
   border-radius: 10px;
