--- a/No9.skill_tree/css/style.css
+++ b/No9.skill_tree/css/style.css
@@ -56,7 +56,7 @@ img {
 }
 
 h1 {
-  font-size: 2.8rem;
+  font-size: 3.5rem;
   font-family: var(--font1);
   font-weight: 900;
   font-style: italic;
@@ -80,7 +80,7 @@ h3 {
   font-size: 2.4rem;
   font-family: var(--font1);
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.1;
   color: var(--white);
 }
 
@@ -92,7 +92,7 @@ h4 {
 }
 
 .t-b {
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .t-pink {
@@ -108,25 +108,26 @@ h4 {
   max-width: 1200px;
 }
 
+
 /*------------------ intro ------------------*/
 
 .intro {
   position: relative;
-  padding: 1.2rem 0 0 1.8rem;
+  padding: 2rem 0 0 1.8rem;
   width: 30%;
 }
 
 .intro p {
   display: inline-block;
   padding: .3rem .5rem .15rem .5rem;
-  margin: 2rem 0 .5rem 0;
+  margin: 1.5rem 0 .5rem 0;
   font-family: var(--font2);
   color: var(--d-blue);
   background-color: var(--purple);
 }
 
 .intro img {
-  margin: 3rem 0 0 1rem;
+  margin: 1.6rem 0 0 1rem;
   width: 90%;
 }
 
@@ -143,7 +144,7 @@ h4 {
 /*------------------ main ------------------*/
 
 .main {
-  padding: 1.2rem 1rem 0 1rem;
+  padding: 2rem 1rem 0 1rem;
   width: 35%;
 }
 
@@ -289,7 +290,7 @@ h4 {
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin: 1.2rem 1.8rem 0 0;
+  margin: 2rem 1.8rem 0 0;
   width: 30%;
   color: var(--white);
   background-color: var(--d-purple1);
