--- a/No9.skill_tree/css/style.css
+++ b/No9.skill_tree/css/style.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  font-family: var(--font2);
   background: linear-gradient(to right, #250060, #070011, #250060)
 }
 
@@ -107,7 +108,6 @@ h4 {
   width: 100%;
   max-width: 1200px;
 }
-
 
 /*------------------ intro ------------------*/
 
