--- a/No5.comic_viewer/css/bootstrap.css
+++ b/No5.comic_viewer/css/bootstrap.css
@@ -35,11 +35,11 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
 html {
   font-family: sans-serif;
