--- a/No5.comic_viewer/css/style.css
+++ b/No5.comic_viewer/css/style.css
@@ -40,8 +40,8 @@ img {
 }
 
 h1 {
-  margin-bottom: -1rem;
-  font-size: 2.5rem;
+  margin-bottom: -1.5rem;
+  font-size: 3rem;
   font-family: var(--font1);
   color: var(--yellow);
   /* border: 1px solid #f00; */
@@ -124,6 +124,7 @@ h4 {
   display: inline-block;
   float: left;
   padding: .5rem 3.5rem .5rem 2rem;
+  margin-bottom:0;
   font-size: 1.2rem;
   color: var(--yellow);
   background: linear-gradient(-105deg, transparent 2rem, var(--blue) 0)top right;
@@ -196,9 +197,7 @@ h4 {
   .b-list {
     margin-top: 0;
   }
-  .b-list ul {
-    margin-top: 4px;
-  }
+
   .b-list a {
     padding: .5rem .5rem;
   }
